--- a/index.html
+++ b/index.html
@@ -23,20 +23,20 @@
 
         <div class="row">
             <div class="image-container"><img id="img1" src="img/bed-lights-off.png" height="200" width="200" onmouseenter="this.src='img/bed-lights-on.png';" onmouseleave="this.src='img/bed-lights-off.png';"/></div>
-            <div class="image-container"><img id="img2" src="img/placeholder/car_placeholder.png" height="200" width="200" onmouseenter="this.src='img/placeholder/car2_placeholder';" onmouseleave="this.src='img/placeholder/car_placeholder';"/></div>
-            <div class="image-container"><img id="img3" src="img/placeholder/yacht_placeholder.png" height="200" width="200" onmouseenter="this.src='img/placeholder/yacht2_placeholder';" onmouseleave="this.src='img/placeholder/yacht_placeholder';"/></div>
+            <div class="image-container"><img id="img2" src="img/placeholder/car_placeholder.png" height="200" width="200" onmouseenter="this.src='img/placeholder/car2_placeholder.png';" onmouseleave="this.src='img/placeholder/car_placeholder.png';"/></div>
+            <div class="image-container"><img id="img3" src="img/placeholder/yacht_placeholder.png" height="200" width="200" onmouseenter="this.src='img/placeholder/yacht2_placeholder.png';" onmouseleave="this.src='img/placeholder/yacht_placeholder.png';"/></div>
         </div>
 
         <div class="row">
-            <div class="image-container"><img id="img4" src="img/placeholder/jet_placeholder.png" height="200" width="200" onmouseenter="this.src='img/placeholder/jet2_placeholder';" onmouseleave="this.src='img/placeholder/jet_placeholder';"/></div>
-            <div class="image-container"><img id="img5" src="img/placeholder/restaurant_placeholder.png" height="200" width="200" onmouseenter="this.src='img/placeholder/restaurant2_placeholder';" onmouseleave="this.src='img/placeholder/restaurant_placeholder';"/></div>
-            <div class="image-container"><img id="img6" src="img/placeholder/investing_placeholder.png" height="200" width="200" onmouseenter="this.src='img/placeholder/investing2_placeholder';" onmouseleave="this.src='img/placeholder/investing_placeholder';"/></div>
+            <div class="image-container"><img id="img4" src="img/placeholder/jet_placeholder.png" height="200" width="200" onmouseenter="this.src='img/placeholder/jet2_placeholder.png';" onmouseleave="this.src='img/placeholder/jet_placeholder.png';"/></div>
+            <div class="image-container"><img id="img5" src="img/placeholder/restaurant_placeholder.png" height="200" width="200" onmouseenter="this.src='img/placeholder/restaurant2_placeholder.png';" onmouseleave="this.src='img/placeholder/restaurant_placeholder.png';"/></div>
+            <div class="image-container"><img id="img6" src="img/placeholder/investing_placeholder.png" height="200" width="200" onmouseenter="this.src='img/placeholder/investing2_placeholder.png';" onmouseleave="this.src='img/placeholder/investing_placeholder.png';"/></div>
             </div>
 
         <div class="row">
-            <div class="image-container"><img id="img7" src="img/placeholder/watches_placeholder.png" height="200" width="200" onmouseenter="this.src='img/placeholder/watches2_placeholder';" onmouseleave="this.src='img/placeholder/watches_placeholder';"/></div>
-            <div class="image-container"><img id="img8" src="img/placeholder/jewellry_placeholder.png" height="200" width="200" onmouseenter="this.src='img/placeholder/jewellry2_placeholder';" onmouseleave="this.src='img/placeholder/jewellry_placeholder';"/></div>
-            <div class="image-container"><img id="img9" src="img/placeholder/wine&whisky_placeholder.png" height="200" width="200" onmouseenter="this.src='img/placeholder/wine&whisky2_placeholder';" onmouseleave="this.src='img/placeholder/wine&whisky_placeholder';"/></div>
+            <div class="image-container"><img id="img7" src="img/placeholder/watches_placeholder.png" height="200" width="200" onmouseenter="this.src='img/placeholder/watches2_placeholder.png';" onmouseleave="this.src='img/placeholder/watches_placeholder.png';"/></div>
+            <div class="image-container"><img id="img8" src="img/placeholder/jewellry_placeholder.png" height="200" width="200" onmouseenter="this.src='img/placeholder/jewellry2_placeholder.png';" onmouseleave="this.src='img/placeholder/jewellry_placeholder.png';"/></div>
+            <div class="image-container"><img id="img9" src="img/placeholder/wine&whisky_placeholder.png" height="200" width="200" onmouseenter="this.src='img/placeholder/wine&whisky2_placeholder.png';" onmouseleave="this.src='img/placeholder/wine&whisky_placeholder.png';"/></div>
         </div>
         
         <script>
@@ -55,28 +55,20 @@
                 document.getElementById('img1').addEventListener('mouseleave', function () {sound1.play(); });
 
                 document.getElementById('img2').addEventListener('mouseenter', function () {sound2.play(); });
-                document.getElementById('img2').addEventListener('mouseleave', function () {sound1.play(); });
 
                 document.getElementById('img3').addEventListener('mouseenter', function () {sound3.play(); });
-                document.getElementById('img3').addEventListener('mouseleave', function () {sound1.play(); });
 
                 document.getElementById('img4').addEventListener('mouseenter', function () {sound4.play(); });
-                document.getElementById('img4').addEventListener('mouseleave', function () {sound1.play(); });
 
                 document.getElementById('img5').addEventListener('mouseenter', function () {sound5.play(); }); 
-                document.getElementById('img5').addEventListener('mouseleave', function () {sound1.play(); });
 
                 document.getElementById('img6').addEventListener('mouseenter', function () {sound6.play(); }); 
-                document.getElementById('img6').addEventListener('mouseleave', function () {sound1.play(); });
 
                 document.getElementById('img7').addEventListener('mouseenter', function () {sound7.play(); });
-                document.getElementById('img7').addEventListener('mouseleave', function () {sound1.play(); });
 
                 document.getElementById('img8').addEventListener('mouseenter', function () {sound8.play(); });
-                document.getElementById('img8').addEventListener('mouseleave', function () {sound1.play(); });
 
                 document.getElementById('img9').addEventListener('mouseenter', function () {sound9.play(); });
-                document.getElementById('img9').addEventListener('mouseleave', function () {sound1.play(); });
             }  
         </script>   
         
