--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
 
         <div class="row">
             <div class="image-container"><img id="img1" src="img/bed-lights-off.png" height="200" width="200" onmouseenter="this.src='img/bed-lights-on.png';" onmouseleave="this.src='img/bed-lights-off.png';"/></div>
-            <div class="image-container"><img id="img2" src="img/placeholder/car_placeholder.png" height="200" width="200" onmouseenter="this.src='img/placeholder/car2_placeholder.png';" onmouseleave="this.src='img/placeholder/car_placeholder.png';"/></div>
-            <div class="image-container"><img id="img3" src="img/placeholder/yacht_placeholder.png" height="200" width="200" onmouseenter="this.src='img/placeholder/yacht2_placeholder.png';" onmouseleave="this.src='img/placeholder/yacht_placeholder.png';"/></div>
+            <div class="image-container"><img id="img2" src="img/car-lights-off.png" height="200" width="200" onmouseenter="this.src='img/car-lights-on.png';" onmouseleave="this.src='img/car-lights-off.png';"/></div>
+            <div class="image-container"><img id="img3" src="img/yacht1.png" height="200" width="200" onmouseenter="this.src='img/yacht2.png';" onmouseleave="this.src='img/yacht1.png';"/></div>
         </div>
 
         <div class="row">
-            <div class="image-container"><img id="img4" src="img/placeholder/jet_placeholder.png" height="200" width="200" onmouseenter="this.src='img/placeholder/jet2_placeholder.png';" onmouseleave="this.src='img/placeholder/jet_placeholder.png';"/></div>
-            <div class="image-container"><img id="img5" src="img/placeholder/restaurant_placeholder.png" height="200" width="200" onmouseenter="this.src='img/placeholder/restaurant2_placeholder.png';" onmouseleave="this.src='img/placeholder/restaurant_placeholder.png';"/></div>
+            <div class="image-container"><img id="img4" src="img/jet1.png" height="200" width="200" onmouseenter="this.src='img/jet2.png';" onmouseleave="this.src='img/jet1.png';"/></div>
+            <div class="image-container"><img id="img5" src="img/restaurant1.png" height="200" width="200" onmouseenter="this.src='img/restaurant2.png';" onmouseleave="this.src='img/restaurant1.png';"/></div>
             <div class="image-container"><img id="img6" src="img/placeholder/investing_placeholder.png" height="200" width="200" onmouseenter="this.src='img/placeholder/investing2_placeholder.png';" onmouseleave="this.src='img/placeholder/investing_placeholder.png';"/></div>
             </div>
 
         <div class="row">
             <div class="image-container"><img id="img7" src="img/placeholder/watches_placeholder.png" height="200" width="200" onmouseenter="this.src='img/placeholder/watches2_placeholder.png';" onmouseleave="this.src='img/placeholder/watches_placeholder.png';"/></div>
-            <div class="image-container"><img id="img8" src="img/placeholder/jewellry_placeholder.png" height="200" width="200" onmouseenter="this.src='img/placeholder/jewellry2_placeholder.png';" onmouseleave="this.src='img/placeholder/jewellry_placeholder.png';"/></div>
+            <div class="image-container"><img id="img8" src="img/jewellery1.png" height="200" width="200" onmouseenter="this.src='img/jewellery2.png';" onmouseleave="this.src='img/jewellery1.png';"/></div>
             <div class="image-container"><img id="img9" src="img/placeholder/wine&whisky_placeholder.png" height="200" width="200" onmouseenter="this.src='img/placeholder/wine&whisky2_placeholder.png';" onmouseleave="this.src='img/placeholder/wine&whisky_placeholder.png';"/></div>
         </div>
         
