--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
         <div class="row">
             <div class="image-container"><img id="img4" src="img/jet1.png" height="200" width="200" onmouseenter="this.src='img/jet2.png';" onmouseleave="this.src='img/jet1.png';"/></div>
             <div class="image-container"><img id="img5" src="img/restaurant1.png" height="200" width="200" onmouseenter="this.src='img/restaurant2.png';" onmouseleave="this.src='img/restaurant1.png';"/></div>
-            <div class="image-container"><img id="img6" src="img/placeholder/investing_placeholder.png" height="200" width="200" onmouseenter="this.src='img/placeholder/investing2_placeholder.png';" onmouseleave="this.src='img/placeholder/investing_placeholder.png';"/></div>
+            <div class="image-container"><img id="img6" src="img/investing1.png" height="200" width="200" onmouseenter="this.src='img/investing2.png';" onmouseleave="this.src='img/investing1.png';"/></div>
             </div>
 
         <div class="row">
-            <div class="image-container"><img id="img7" src="img/placeholder/watches_placeholder.png" height="200" width="200" onmouseenter="this.src='img/placeholder/watches2_placeholder.png';" onmouseleave="this.src='img/placeholder/watches_placeholder.png';"/></div>
+            <div class="image-container"><img id="img7" src="img/watches1.png" height="200" width="200" onmouseenter="this.src='img/watches2.png';" onmouseleave="this.src='img/watches1.png';"/></div>
             <div class="image-container"><img id="img8" src="img/jewellery1.png" height="200" width="200" onmouseenter="this.src='img/jewellery2.png';" onmouseleave="this.src='img/jewellery1.png';"/></div>
-            <div class="image-container"><img id="img9" src="img/placeholder/wine&whisky_placeholder.png" height="200" width="200" onmouseenter="this.src='img/placeholder/wine&whisky2_placeholder.png';" onmouseleave="this.src='img/placeholder/wine&whisky_placeholder.png';"/></div>
+            <div class="image-container"><img id="img9" src="img/wine&whiskey1.png" height="200" width="200" onmouseenter="this.src='img/wine&whiskey2.png';" onmouseleave="this.src='img/wine&whiskey1.png';"/></div>
         </div>
         
         <script>
